Adjust images to prevent stretch

--- a/styles/style.css
+++ b/styles/style.css
@@ -602,7 +602,8 @@ nav ul li a {
   cursor: grabbing;
 }
 .page.portfolio img {
-  width: 100%
+  width: auto;
+  max-height: 80em;
 }
 
 .page.portfolio .slick-slider {
